# whisper_keys

./: .gitignore  Cargo.toml  README.md
engine/: Cargo.toml
engine/src/: audio_manager.rs  pack.rs
key_listener/: Cargo.toml
key_listener/src/: main.rs
lib/: Cargo.toml
lib/src/: audio_manager.rs  config_template.json5  lib.rs  pack.rs
src/: audio_manager.rs  main.rs  pack.rs
temp/: Cargo.toml
temp/src/: main.rs
ui/: Cargo.toml
ui/src/: main.rs  style.rs
