[package]
name = "ui"
version = "2025.8.1"
edition = "2024"

[dependencies]
lib = { path = "../lib" }
iced = { version = "0.13.1", features = ["advanced"] }
anyhow = { workspace = true }
rfd = "0.15.4"
open = "5.3.2"

[package.metadata.bundle]
name = "WhisperKeys"
identifier = "dev.jocke.whisper_keys"
resources = ["./key_listener"]
